--- a/P1Template/build.gradle
+++ b/P1Template/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     //https://mvnrepository.com/artifact/org.postgresql/postgresql
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
 	
+	// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+	
 	//Javalin dependency so that we can expose REST endpoints and send responses to the front end
     compile group: 'io.javalin', name: 'javalin', version: '3.13.3'
     compile "org.slf4j:slf4j-simple:1.7.30" //we had to add this according to the console
